--- a/app/templates/matches/admin.hbs
+++ b/app/templates/matches/admin.hbs
@@ -61,7 +61,7 @@
                 </label>
                 <div class="col-sm-10">
                   <div class="input-group">
-                    {{input type="text" value=message_text class="form-control" id="message"}}
+                    {{input type="text" value=messageText class="form-control" id="message"}}
                     <span class="input-group-btn">
                       <button {{action "saveMessage"}} class="btn btn-danger">Send</button>
                     </span>
